code: inspect search operators added, temporal analysis progressed

--- a/src/thesis_schneg/temporal_analysis.ipynb
+++ b/src/thesis_schneg/temporal_analysis.ipynb
@@ -10,83 +10,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's load the annual top 25 queries from google:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>query</th>\n",
-       "      <th>score</th>\n",
-       "      <th>year</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>google</td>\n",
-       "      <td>100</td>\n",
-       "      <td>2022</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>youtube</td>\n",
-       "      <td>77</td>\n",
-       "      <td>2022</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>you</td>\n",
-       "      <td>69</td>\n",
-       "      <td>2022</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>video</td>\n",
-       "      <td>67</td>\n",
-       "      <td>2022</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>facebook</td>\n",
-       "      <td>62</td>\n",
-       "      <td>2022</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      query  score  year\n",
-       "0    google    100  2022\n",
-       "1   youtube     77  2022\n",
-       "2       you     69  2022\n",
-       "3     video     67  2022\n",
-       "4  facebook     62  2022"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2022 2021 2020 2019 2018 2017 2016 2015 2014 2013 2012 2011 2010 2009\n",
+      " 2008 2007 2006 2005 2004]\n",
+      "Index(['query', 'score', 'year'], dtype='object')\n"
+     ]
     }
    ],
    "source": [
@@ -94,233 +36,163 @@
     "\n",
     "annual_google_trends = pd.read_csv(\"/mnt/ceph/storage/data-in-progress/data-teaching/theses/thesis-schneg/google_trends/google_trends_total.csv\")\n",
     "\n",
-    "annual_google_trends.head()"
+    "print(annual_google_trends['year'].unique())\n",
+    "print(annual_google_trends.columns)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, we load the annual top 25 queries, the annual top 25 english queries and the annual top 25 google queries from the the aql:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>year</th>\n",
-       "      <th>serp_query_text_url</th>\n",
-       "      <th>count()</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>525</th>\n",
-       "      <td>2020</td>\n",
-       "      <td>openeuler</td>\n",
-       "      <td>44268</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>526</th>\n",
-       "      <td>2020</td>\n",
-       "      <td>from:EPAWater AND #greenwater</td>\n",
-       "      <td>18117</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>527</th>\n",
-       "      <td>2020</td>\n",
-       "      <td>#zesummendoheem/</td>\n",
-       "      <td>15891</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>528</th>\n",
-       "      <td>2020</td>\n",
-       "      <td>#nolaopen</td>\n",
-       "      <td>14523</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>529</th>\n",
-       "      <td>2020</td>\n",
-       "      <td>Avril Lavigne Knockin’ on Heaven’s Door</td>\n",
-       "      <td>7272</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>530</th>\n",
-       "      <td>2020</td>\n",
-       "      <td>Cat Stevens Peace Train</td>\n",
-       "      <td>7214</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>531</th>\n",
-       "      <td>2020</td>\n",
-       "      <td>John Lennon Imagine</td>\n",
-       "      <td>7175</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>532</th>\n",
-       "      <td>2020</td>\n",
-       "      <td>John Mellencamp Peaceful World</td>\n",
-       "      <td>6915</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>533</th>\n",
-       "      <td>2020</td>\n",
-       "      <td>The Rennas Peace In My Heart</td>\n",
-       "      <td>6840</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>534</th>\n",
-       "      <td>2020</td>\n",
-       "      <td>Jann Arden Fighting for the World</td>\n",
-       "      <td>6547</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>535</th>\n",
-       "      <td>2020</td>\n",
-       "      <td>Peter Alsop Chickens For Peace</td>\n",
-       "      <td>6545</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>536</th>\n",
-       "      <td>2020</td>\n",
-       "      <td>Teresa Jennings A Song of Peace (Atelier Musca...</td>\n",
-       "      <td>6332</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>537</th>\n",
-       "      <td>2020</td>\n",
-       "      <td>bremen staatsschutz</td>\n",
-       "      <td>6148</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>538</th>\n",
-       "      <td>2020</td>\n",
-       "      <td>Triveni,Tng,Bagforever,Jagdamba,Mahi,Ag,Sangin...</td>\n",
-       "      <td>4704</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>539</th>\n",
-       "      <td>2020</td>\n",
-       "      <td>#Europeennes2014</td>\n",
-       "      <td>4696</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>540</th>\n",
-       "      <td>2020</td>\n",
-       "      <td>Triveni,Platinum,Jagdamba,Asmi,Kalazone,Kiara,...</td>\n",
-       "      <td>4384</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>541</th>\n",
-       "      <td>2020</td>\n",
-       "      <td>#presidencenormale</td>\n",
-       "      <td>4246</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>542</th>\n",
-       "      <td>2020</td>\n",
-       "      <td>Trident</td>\n",
-       "      <td>4066</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>543</th>\n",
-       "      <td>2020</td>\n",
-       "      <td>triveni,my-pac,Solemio,Bagforever,Jagdamba,Arp...</td>\n",
-       "      <td>3652</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>544</th>\n",
-       "      <td>2020</td>\n",
-       "      <td>#nolamovienight</td>\n",
-       "      <td>3524</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>545</th>\n",
-       "      <td>2020</td>\n",
-       "      <td>presence</td>\n",
-       "      <td>3436</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>546</th>\n",
-       "      <td>2020</td>\n",
-       "      <td>MessagesCenter</td>\n",
-       "      <td>3234</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>547</th>\n",
-       "      <td>2020</td>\n",
-       "      <td>ice contract kent county michigan</td>\n",
-       "      <td>3106</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>548</th>\n",
-       "      <td>2020</td>\n",
-       "      <td>triveni,tng,jagdamba,jharjhar,surat-diamonds,a...</td>\n",
-       "      <td>2794</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>549</th>\n",
-       "      <td>2020</td>\n",
-       "      <td>payment</td>\n",
-       "      <td>2558</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     year                                serp_query_text_url  count()\n",
-       "525  2020                                          openeuler    44268\n",
-       "526  2020                      from:EPAWater AND #greenwater    18117\n",
-       "527  2020                                   #zesummendoheem/    15891\n",
-       "528  2020                                          #nolaopen    14523\n",
-       "529  2020            Avril Lavigne Knockin’ on Heaven’s Door     7272\n",
-       "530  2020                            Cat Stevens Peace Train     7214\n",
-       "531  2020                                John Lennon Imagine     7175\n",
-       "532  2020                     John Mellencamp Peaceful World     6915\n",
-       "533  2020                       The Rennas Peace In My Heart     6840\n",
-       "534  2020                  Jann Arden Fighting for the World     6547\n",
-       "535  2020                     Peter Alsop Chickens For Peace     6545\n",
-       "536  2020  Teresa Jennings A Song of Peace (Atelier Musca...     6332\n",
-       "537  2020                                bremen staatsschutz     6148\n",
-       "538  2020  Triveni,Tng,Bagforever,Jagdamba,Mahi,Ag,Sangin...     4704\n",
-       "539  2020                                   #Europeennes2014     4696\n",
-       "540  2020  Triveni,Platinum,Jagdamba,Asmi,Kalazone,Kiara,...     4384\n",
-       "541  2020                                 #presidencenormale     4246\n",
-       "542  2020                                            Trident     4066\n",
-       "543  2020  triveni,my-pac,Solemio,Bagforever,Jagdamba,Arp...     3652\n",
-       "544  2020                                    #nolamovienight     3524\n",
-       "545  2020                                           presence     3436\n",
-       "546  2020                                     MessagesCenter     3234\n",
-       "547  2020                  ice contract kent county michigan     3106\n",
-       "548  2020  triveni,tng,jagdamba,jharjhar,surat-diamonds,a...     2794\n",
-       "549  2020                                            payment     2558"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "83543021\n"
+     ]
     }
    ],
    "source": [
     "annual_aql_trends = pd.read_parquet(\"/mnt/ceph/storage/data-in-progress/data-teaching/theses/thesis-schneg/analysis_data/analysis/aql-get-annual-top-queries-special\")\n",
+    "annual_aql_trends_eng = pd.read_parquet(\"/mnt/ceph/storage/data-in-progress/data-teaching/theses/thesis-schneg/analysis_data/analysis/aql-get-annual-top-queries-english\")\n",
+    "annual_aql_trends_google = pd.read_parquet(\"/mnt/ceph/storage/data-in-progress/data-teaching/theses/thesis-schneg/analysis_data/analysis/aql-get-annual-top-queries-google\")\n",
     "\n",
-    "annual_aql_trends[annual_aql_trends['year'] == 2020]"
+    "\n",
+    "annual_aql_trends.rename(columns={'serp_query_text_url': 'query', 'count()': 'score'}, inplace=True)\n",
+    "annual_aql_trends_eng.rename(columns={'serp_query_text_url': 'query', 'count()': 'score'}, inplace=True)\n",
+    "annual_aql_trends_google.rename(columns={'serp_query_text_url': 'query', 'count()': 'score'}, inplace=True)\n",
+    "# print(annual_aql_trends.columns)\n",
+    "print(annual_aql_trends['score'].sum())\n",
+    "aql_top_queries = {}\n",
+    "aql_top_queries.update({'aql_google': annual_aql_trends_google})\n",
+    "aql_top_queries.update({'aql_english': annual_aql_trends_eng})\n",
+    "aql_top_queries.update({'aql_native': annual_aql_trends})\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's find out if we have intersections in the annual top 25 of both query logs:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AQL AQL_GOOGLE:\n",
+      "2004: set()\n",
+      "2005: set()\n",
+      "2006: set()\n",
+      "2007: set()\n",
+      "2008: set()\n",
+      "2009: set()\n",
+      "2010: set()\n",
+      "2011: set()\n",
+      "2012: {'youtube', 'facebook', 'google'}\n",
+      "2013: {'youtube', 'yahoo', 'facebook', 'google'}\n",
+      "2014: set()\n",
+      "2015: set()\n",
+      "2016: set()\n",
+      "2017: set()\n",
+      "2018: set()\n",
+      "2019: set()\n",
+      "2020: set()\n",
+      "2021: set()\n",
+      "2022: set()\n",
+      "AQL AQL_ENGLISH:\n",
+      "2004: set()\n",
+      "2005: set()\n",
+      "2006: set()\n",
+      "2007: set()\n",
+      "2008: set()\n",
+      "2009: set()\n",
+      "2010: set()\n",
+      "2011: set()\n",
+      "2012: set()\n",
+      "2013: set()\n",
+      "2014: set()\n",
+      "2015: set()\n",
+      "2016: set()\n",
+      "2017: set()\n",
+      "2018: set()\n",
+      "2019: set()\n",
+      "2020: set()\n",
+      "2021: set()\n",
+      "2022: set()\n",
+      "AQL AQL_NATIVE:\n",
+      "2004: {'free'}\n",
+      "2005: set()\n",
+      "2006: set()\n",
+      "2007: {'video'}\n",
+      "2008: set()\n",
+      "2009: set()\n",
+      "2010: set()\n",
+      "2011: {'you'}\n",
+      "2012: {'google'}\n",
+      "2013: set()\n",
+      "2014: set()\n",
+      "2015: set()\n",
+      "2016: set()\n",
+      "2017: set()\n",
+      "2018: set()\n",
+      "2019: set()\n",
+      "2020: set()\n",
+      "2021: set()\n",
+      "2022: set()\n",
+      "aql_google_count: [16596750, 4.792441341332279]\n",
+      "aql_english_count: [2412914, 0.6967477853603528]\n",
+      "aql_native_count: [83543021, 24.123700581149368]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# transform counts into scores by assigning a score of 100 to the most frequent query of each year and compute the ratio of the other queries\n",
+    "sizes = {}\n",
+    "for key, data in aql_top_queries.items():\n",
+    "    print(f\"AQL {key.upper()}:\")\n",
+    "    years = set(list(data['year']))\n",
+    "    sizes.update({f\"{key}_count\": [data['score'].sum(), 100*data['score'].sum()/346310968]})\n",
+    "    for year in years:\n",
+    "        # print(year)\n",
+    "        max_count = data[data['year'] == year]['score'].max()\n",
+    "        data.loc[data['year'] == year, 'score'] = round(data.loc[data['year'] == year, 'score'] / max_count * 100)\n",
+    "        # print(year)\n",
+    "\n",
+    "    years = set(list(data['year']))\n",
+    "    for year in years:\n",
+    "        if year >= 2004:\n",
+    "            aql_queries = set(data[data['year'] == year]['query'].reset_index(drop=True))\n",
+    "            google_queries = set(annual_google_trends[annual_google_trends['year'] == year]['query'].reset_index(drop=True))\n",
+    "            # google_queries_set = set(google_queries)\n",
+    "            # find matching queries\n",
+    "            matches = google_queries.intersection(aql_queries)\n",
+    "            # print the matching queries\n",
+    "            print(f\"{year}: {matches}\")\n",
+    "\n",
+    "for key,value in sizes.items():\n",
+    "    print(f\"{key}: {value}\")    \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As we can see, there are only few intersections in the annual top 25 queries of google and the aql queries. "
    ]
   }
  ],
